--- a/src/components/choose-us/choose-us.css
+++ b/src/components/choose-us/choose-us.css
@@ -1,9 +1,31 @@
 
 .chooseUsCard{
-    /* width:90%; */
-    padding-left: 0.5rem;
+    width:80%;
+    /* padding-left: 0.5rem; */
+    margin: 1em;
 }
 .icon{
     font-size: 2rem;
     color: var(--secondary-color);
+}
+.chooseUsCard > p {
+    text-align: center;
+}
+
+.chooseUsCard > h2{
+    text-align: center;
+}
+
+
+/* responsive breakpoints */
+
+@media screen and (min-width:800px) {
+    .chooseUsCard{
+        width:40%;
+        margin: 1em;
+    }
+
+    
+
+    
 }
