--- a/src/components/hero-component/hero.css
+++ b/src/components/hero-component/hero.css
@@ -7,18 +7,10 @@
     position: relative;
     background-image: url("https://b.zmtcdn.com/web_assets/81f3ff974d82520780078ba1cfbd453a1583259680.png");
     background-size:cover;
-    color: #fff;
+    color: var(--pale-white);
     padding: 1em;
-    
-    
+    height: 40vh;  
 }
 .hero-card > h2{
-    /* color: var(--secondary-color) ; */
     width: 37%;    
 }
-
-
-
-/* .hero-card > ul > li:hover{
-    background-color: none !important;
-} */
