--- a/src/components/cards/index.css
+++ b/src/components/cards/index.css
@@ -1,82 +1,81 @@
-
 /* .overlay-card{
     width: 100%;
     /* border-width: 0.5em; */
-    /* text-align: center;
+/* text-align: center;
     background-image: url("https://b.zmtcdn.com/data/pictures/5/18800475/83ef877a6bbe67c8eebc7290a9b8d803.jpg?fit=around|960:500&crop=960:500;*,*");
     background-size: cover;
     color:var(--pale-white);
     padding: 2em;
     margin:1rem */
-/* } */ */
-.overlay-card h1{
-    width: 100%;
+/* } */
+*/ .overlay-card h1 {
+  width: 100%;
 }
-.border-radius{
-    border-radius: 3%;
+.border-radius {
+  border-radius: 3%;
 }
-.cardWithText{
-    text-align: center;    
+.cardWithText {
+  text-align: center;
 }
 .cardWithText > h3 {
-    display: inline;
-    border-bottom-style: solid;
-    border-bottom-width:2px ;
+  display: inline;
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
 }
-.card{
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-
+.card {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
-.serviceCard{
-    padding:0.5rem;
-    margin: 1em;
-}
-
-.ratingBadge{
-    position: absolute;
-    top: 0.8em;
-    left: 0.8em;
-    border-style: solid;
-    border-width: 0px;
-    background-color: var(--teritiary-Color);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 3rem;
-    height: 2rem;
-    color: var(--pale-white);
-    padding: 1rem;
-    font-size: 1.3rem;
+.serviceCard {
+  padding: 0.5rem;
+  margin: 1em;
 }
 
-.ratingBadge > div >span{
-    margin-left:7px;
-    margin-bottom:5px ;
+.ratingBadge {
+  position: absolute;
+  top: 0.8em;
+  left: 0.8em;
+  border-style: solid;
+  border-width: 0px;
+  background-color: var(--teritiary-Color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 3rem;
+  height: 2rem;
+  color: var(--pale-white);
+  padding: 1rem;
+  font-size: 1.3rem;
 }
 
-.wishlistCard{
-    width:80%;
+.ratingBadge > div > span {
+  margin-left: 7px;
+  margin-bottom: 5px;
 }
 
-.productCard{
-    margin:1rem;
-    /* height:28rem; */
-   
+.wishlistCard {
+  width: 80%;
 }
 
-#wishListStyle{
-    color: var(--badge-color);    
+.productCard {
+  margin: 1rem;
+  /* height:28rem; */
 }
 
-.like-icon:hover{
-    cursor: pointer;
+#wishListStyle {
+  color: var(--badge-color);
 }
 
-.aboutImg{
-    width: 80%;
+.like-icon:hover {
+  cursor: pointer;
 }
 
-.productCard > div > p,h3,h4 {
-    margin:2px
+.aboutImg {
+  width: 80%;
+}
+
+.productCard > div > p,
+h3,
+h4 {
+  margin: 2px;
 }
