--- a/src/components/input/index.css
+++ b/src/components/input/index.css
@@ -1,15 +1,15 @@
-label{
-    display: block;
-    font-size: 1.2rem;
-    /* margin-bottom: 1em; */
+label {
+  display: block;
+  font-size: 1.2rem;
+  /* margin-bottom: 1em; */
 }
 
 .input {
-    height: 2rem;
-    width: 15rem;
-    margin-bottom: 1em;
+  height: 2rem;
+  width: 15rem;
+  margin-bottom: 1em;
 }
 
 .credStoreDiv > div {
-    margin-right:1.5rem
+  margin-right: 1.5rem;
 }
