--- a/src/components/navbar/index.css
+++ b/src/components/navbar/index.css
@@ -1,45 +1,42 @@
-.position-rel{
-    position: relative;
-    /* background-color: red; */
+.position-rel {
+  position: relative;
+  /* background-color: red; */
 }
 
-.nav-icon-badge{
-    position: absolute;
-    top:-65%;
-    right: -25%;
-    /* background-color: var(--badge-color); */
-    color: var(--secondary-color);
-    font-size: 1.3rem;
-    width: 2rem;
-    text-align: center;
-    border-radius: 0.2em;
-    padding: 0.1em;
+.nav-icon-badge {
+  position: absolute;
+  top: -65%;
+  right: -25%;
+  /* background-color: var(--badge-color); */
+  color: var(--secondary-color);
+  font-size: 1.3rem;
+  width: 2rem;
+  text-align: center;
+  border-radius: 0.2em;
+  padding: 0.1em;
 }
 
-.header-icons-div{
-    width:12rem;
+.header-icons-div {
+  width: 12rem;
 }
 
+.desktopNavbar {
+  display: none;
+}
 
-.desktopNavbar{
+.mobileNavbar {
+  display: block;
+}
+
+.navbar-rightside-div {
+  width: 30%;
+}
+
+@media screen and (min-width: 800px) {
+  .mobileNavbar {
     display: none;
-}
-
-.mobileNavbar{
-    display: block;
-}
-
-.navbar-rightside-div{
-    width:30%
-}
-
-@media screen and (min-width:800px) {
-  .mobileNavbar{
-      display: none;
   }
-  .desktopNavbar{
+  .desktopNavbar {
     display: block;
-}
-
-    
+  }
 }
