--- a/src/routes/index.css
+++ b/src/routes/index.css
@@ -27,6 +27,14 @@
   /* justify-content: center; */
 }
 
+
+/* new css  */
+
+
+
+
+
+
 /* responsive breakpoints */
 @media screen and (min-width: 800px) {
   .getinTouchDiv {
