refactor:desktop navbar

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,8 @@
     --background-color:#16003B;
     --cta-font-color:#DBD8E3;
     --shadow:rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
-    --modal-background-color:rgba(0,0.1,0.1,0.2)
+    --modal-background-color:rgba(0,0.1,0.1,0.2);
+    --primary-background-color:#000000
 }
 
 .success-toast{
@@ -43,7 +44,7 @@
 
 #cta{
     text-align: center;
-    width: 100%;
+    max-width: 10rem;
     border-style: none;
     padding: 0.3em;
     font-size: 1rem;
