--- a/src/components/hero/index.css
+++ b/src/components/hero/index.css
@@ -30,7 +30,7 @@
   width: 2rem;
   height: 2rem;
   margin:5px 1rem 0px 0px;
-  color: var(--primary-color);
+  color: var(--cta-font-color);
   cursor: pointer;
 }
 
