--- a/src/routes/auth/auth.css
+++ b/src/routes/auth/auth.css
@@ -47,12 +47,13 @@ form{
 }
 
 
-#cta{
+.cta{
     text-align: center;
     width: 100%;
     border-style: none;
     padding: 0.3em;
     font-size: 1rem;
+    cursor: pointer;
 }
 
 button {margin-bottom: 5px;}    
